--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "app.rork.prayer-journal-verse-app"
+      "package": "app.rork.prayer-journal-verse-app",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
@@ -40,3 +41,4 @@
     }
   }
 }
+   
